--- a/src/app/components/school/school.component.html
+++ b/src/app/components/school/school.component.html
@@ -10,18 +10,25 @@
 </div>
 
 <div class="second" style="background-color: DarkBlue ;" *ngIf="!schoolSelected">
-	<div class="third" style="align-content: center; text-align: center; width: 100%">
-		<form class="example-form">
-			<mat-form-field class="example-full-width">
-				<input type="text" placeholder="Find School..." aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto"
-				 (selectItem)="selectedItem($event)">
-				<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" mat-input-name="autocompleteField" mat-select-on-match required
-				 [displayWith]="displayFn">
-					<mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-						{{ option.schoolName }}
-					</mat-option>
-				</mat-autocomplete>
-			</mat-form-field>
-		</form>
+	<div class="third" id="parent">
+		<div class="child">
+			<form class="example-form">
+				<mat-form-field class="example-full-width">
+					<input type="text" placeholder="Find School..." aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto"
+					 (selectItem)="selectedItem($event)">
+					<mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" mat-input-name="autocompleteField" mat-select-on-match required
+					 [displayWith]="displayFn">
+						<mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+							{{ option.schoolName }}
+						</mat-option>
+					</mat-autocomplete>
+				</mat-form-field>
+			</form>
+		</div>
+		<div class="child" *ngIf="showCancel()">
+			<br>
+			<a (click)="cancelSchoolSearch()">cancel</a>
+		</div>
+
 	</div>
 </div>
