--- a/src/app/components/messaging/messaging.component.html
+++ b/src/app/components/messaging/messaging.component.html
@@ -8,11 +8,13 @@
 		</div>
 	</div>
 
-	<div class="second selectNew" style="background-color: DarkBlue;" (click)="sendEmail()" *ngIf="emailSending">
+	<div class="second selectNew" style="background-color: DarkBlue;" *ngIf="emailSending">
 		<app-gears></app-gears>
 	</div>
 
-	<div class="second selectNew" style="background-color: DarkBlue;" (click)="sendText()">
+
+
+	<div class="second selectNew" style="background-color: DarkBlue;" (click)="sendText()" *ngIf="!textSending">
 		<div class="third" id="parent">
 			<div>
 				<div class="child">
@@ -21,4 +23,10 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="second selectNew" style="background-color: DarkBlue;" *ngIf="textSending">
+		<app-gears></app-gears>
+	</div>
+
+
 </div>
