--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
 <app-centeredtext title="We Need Your Location" text="Please click Allow/Yes when prompted"></app-centeredtext>
-
+<app-geolocate></app-geolocate>
 <app-footer></app-footer>
