--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,10 +1,12 @@
+<app-header></app-header>
+
 <div class="row custom-row">
         <div class= "col-sm-5 custom-container jumbotron" align = "center">
-             
+
           <form class="form-horizontal">
               <fieldset>
                 <legend>Contact Us</legend>
-               
+
                   <!--- Email Block -->
                   <div class="form-group">
                     <label for="inputEmail">Name</label>
@@ -17,14 +19,14 @@
                     <label for="inputSchool">School Name</label>
                     <input type="text">
                   </div>
-           
+
 
                   <!-- Email Block-->
                   <div class="form-group">
                     <label for="inputEmail" >E-mail</label>
                     <input type="email">
                   </div>
-                   
+
 
                   <!-- Contact Box Block-->
                   <div class = "form-group">
@@ -32,7 +34,7 @@
                       <textarea id="comment" cols = "30" rows ="10"></textarea>
                   </div>
 
-                
+
                  <!--- Buttons Block -->
                   <div class="form-group">
                       <button type="reset" class="btn btn-default">Cancel</button>
@@ -42,3 +44,5 @@
           </form>
         </div>
       </div>
+
+      <app-footer></app-footer>
