--- a/src/app/components/mapeditor/mapeditor.component.html
+++ b/src/app/components/mapeditor/mapeditor.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
 
+
 <div *ngIf="getStep()=='list'">
   <h1>Buildings</h1>
 
@@ -35,29 +36,34 @@
 
 
 <div *ngIf="getStep()=='editdimensions'">
-  <h1>Edit Dimensions</h1>
+  <h3>Edit Dimensions</h3>
 
-  {{ structure.buildingName }}
+  <h1>{{ structure.buildingName }}</h1>
   <br>
   <br>
 
-  <form class="example-form">
-    <div *ngFor="let d of dimensions">
+  <form #editorForm="ngForm">
+    <div *ngFor="let d of dimensions" style="width: 800px">
       <b>Point {{ d.p }}</b> :
       <input type="hidden" value="d.p">
       <mat-form-field class="example-tuple-width">
-        <input matInput name="width" placeholder="Width" [(ngModel)]="d.w">
+        <input matInput name="width" placeholder="X Coord" [(ngModel)]="d.w" onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
       </mat-form-field>
 
       <mat-form-field class="example-tuple-width">
-        <input matInput name="height" placeholder="Height" [(ngModel)]="d.h">
+        <input matInput name="height" placeholder="Y Coord" [(ngModel)]="d.h" onkeypress='return event.charCode >= 48 && event.charCode <= 57'>
       </mat-form-field>
 
-      <mat-checkbox name="start" [(ngModel)]="d.s">Start Point</mat-checkbox>
-
-      <mat-checkbox name="end" [(ngModel)]="d.e">End Point</mat-checkbox>
+      <mat-checkbox name="start" [checked]="d.s" (change)="startCheckHit(d.p)">Start Point</mat-checkbox>
+      <mat-checkbox name="end" [checked]="d.e" (change)="endCheckHit(d.p)">End Point</mat-checkbox>
+      &nbsp; &nbsp; &nbsp;
+      <button mat-mini-fab color="warn" (click)="deleteDimension(d.p)" style="width: 40px" type="button"> X </button>
+      <button mat-mini-fab color="primary" (click)="moveDimensionDown(d.p)" style="width: 40px" type="button"> \/ </button>
+      <button mat-mini-fab color="primary" (click)="moveDimensionUp(d.p)" style="width: 40px" type="button"> /\ </button>
     </div>
   </form>
+
+  <button mat-raised-button color="primary" (click)="addDimension()">Add Point</button>
 
 </div>
 
