small updates, not too important

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -42,3 +42,5 @@
           </form>
         </div>
       </div>
+
+    <!-- Need to use data.service.ts to grab info from backend to frontned thats the flow -->
