--- a/src/app/designcomponents/adminlinks/adminlinks.component.html
+++ b/src/app/designcomponents/adminlinks/adminlinks.component.html
@@ -9,7 +9,7 @@
 	</div>
 
 
-	<div class="second selectNew" style="background-color: DarkBlue;" (click)="editMap()">
+	<div class="second selectNew" style="background-color: DarkBlue;">
 		<div class="third" id="parent">
 			<div>
 				<div class="child">
