Fixed templates, need to fix findStudent template only

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -4,12 +4,12 @@
     <form class = "example-form center" name = "contactform">
       <mat-card>
           <mat-form-field class = "example-full-width">
-              <input matInput [(ngModel)] = "Submit" placeholder = "Name" name="Name">
+              <input matInput placeholder = "Name" name="name">
           </mat-form-field>
 
           <br>
           <mat-form-field class = "example-full-width">
-              <input matInput [(ngModel)] = "Submit" placeholder = "Subject" name="Subject">
+              <input matInput placeholder = "Subject" name="subject">
           </mat-form-field>
 
           <!-- Adding an option to scroll through options-->
