--- a/src/app/components/gta/gta.component.html
+++ b/src/app/components/gta/gta.component.html
@@ -17,17 +17,17 @@
 	  <form class = "example-form center">
 		<mat-card>
 			<mat-form-field class = "example-full-width">
-				<input matInput [(ngModel)] = "Submit" placeholder = "Licence Plate">
+				<input matInput [(ngModel)] = "Submit" name = "licPlate" placeholder = "Licence Plate">
 			</mat-form-field>
 
 			<br>
 			<mat-form-field class = "example-full-width">
-				<input matInput [(ngModel)] = "Submit" placeholder = "VIN">
+				<input matInput [(ngModel)] = "Submit" name = "VIN" placeholder = "VIN">
 			</mat-form-field>
 		
 			<br>
 			<mat-form-field class = "example-full-width">
-					<input matInput [(ngModel)] = "Submit" placeholder = "Licence #">
+					<input matInput [(ngModel)] = "Submit" name = "licNum" placeholder = "Licence #">
 			</mat-form-field>
 
 			<br> 
