--- a/src/app/components/stalking/stalking.component.html
+++ b/src/app/components/stalking/stalking.component.html
@@ -17,23 +17,23 @@
 		<form class = "example-form center">
 		  <mat-card>
 			  <mat-form-field class = "example-full-width">
-				  <input matInput [(ngModel)] = "Submit" placeholder = "Name of the person if known">
+				  <input matInput [(ngModel)] = "Submit" name = "nameOfPerson" placeholder = "Name of the person if known">
 			  </mat-form-field>
   
 			  <br>
 			  <mat-form-field class = "example-full-width">
-				  <input matInput [(ngModel)] = "Submit" placeholder = "Description of person">
+				  <input matInput [(ngModel)] = "Submit" name = "descOfPerson" placeholder = "Description of person">
 			  </mat-form-field>
 		  
 			  <br>
 			  <mat-form-field class = "example-full-width">
-					  <input matInput [(ngModel)] = "Submit" placeholder = "Relation to you if any">
+					  <input matInput [(ngModel)] = "Submit" name = "relToPerson" placeholder = "Relation to you if any">
 			  </mat-form-field>
 
 			  <!-- Need a slide for this portion, and store info on that slider-->
 			  <br>
 			  <mat-form-field class = "example-full-width">
-					  <input matInput [(ngModel)] = "Submit" placeholder = "Danger">
+					  <input matInput [(ngModel)] = "Submit" name = "dangerSlider" placeholder = "Danger">
 			  </mat-form-field>
 
 			  <br> 
