updated forms, updated options, added dropdown menu

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -11,7 +11,9 @@
 				receive live updates and allow special administration. <br><br>
 				Every user must give basic information for student and admin such as: name,
 				school e-mail, phone number. This will allow the website to push notifications.
-				The server and database must be able to pass location information.
+				The server and database must be able to pass location information.<br><br>
+				The purpose of the website is not to replace 9-1-1, but rather to aid first aid 
+				responders during a school emergency. 
 		</div>
 
 		<div class="fancy-line">
@@ -22,7 +24,7 @@
 		<br><br><br><br><br><br>
 
 		<app-card cardTitle1="Police Assist"
-		cardImage1="https://kingstonjournal.com/wp-content/uploads/2013/01/swat-468x312.png"
+		cardImage1="https://qph.fs.quoracdn.net/main-qimg-d0aaf322830eebf0c4e86e90ea5ea467-c"
 		cardText1="If the student is safe, our application provides the ability for students to
 		report where an active shooter is. This information is then passed onto police to help
 		them locate the suspects as quickly as possible."
