--- a/src/app/components/findstudentpublic/findstudentpublic.component.html
+++ b/src/app/components/findstudentpublic/findstudentpublic.component.html
@@ -4,12 +4,12 @@
     <form class = "example-form center">
       <mat-card>
           <mat-form-field class = "example-full-width">
-              <input matInput [(ngModel)] = "Submit" placeholder = "Name of Student">
+              <input matInput [(ngModel)] = "Submit" placeholder = "Name of Student" name = "nameOfStudent">
           </mat-form-field>
 
           <br>
           <mat-form-field class = "example-full-width">
-              <input matInput [(ngModel)] = "Submit" placeholder = "Your Key">
+              <input matInput [(ngModel)] = "Submit" placeholder = "Your Key" name = "key">
           </mat-form-field>
       
           <br> 
