--- a/src/app/components/rape/rape.component.html
+++ b/src/app/components/rape/rape.component.html
@@ -1,4 +1,3 @@
-
 <div *ngIf="getStep()==1">
 		<app-bigbox title="Did this just occur?" color="#7380C9"></app-bigbox>
 		<app-optionsbuttons title="Yes" (click)="gotoStep(2)"></app-optionsbuttons>
@@ -17,41 +16,43 @@
 		  <form class = "example-form center">
 			<mat-card>
 				<mat-form-field class = "example-full-width">
-					<input matInput [(ngModel)] = "Submit" placeholder = "Description of Suspect">
+					<input matInput [(ngModel)] = "Submit" placeholder = "Description of Suspect" name = "descNonSafe">
 				</mat-form-field>
 	
 				<br>
 				<mat-form-field class = "example-full-width">
-					<input matInput [(ngModel)] = "Submit" placeholder = "Relation if Any">
+					<input matInput [(ngModel)] = "Submit" placeholder = "Relation if Any" name = "relNonSafe">
 				</mat-form-field>
 			
 				<br>
 				<mat-form-field class = "example-full-width">
-						<input matInput [(ngModel)] = "Submit" placeholder = "Time/Date">
+						<input matInput [(ngModel)] = "Submit" placeholder = "Time/Date" name = "timeNonSafe">
 						<!-- Need to add an option if it less than 48 hours-->
 						<!--If less than 48 hours output nearest hospital location-->
 				</mat-form-field>
 
 				<br>
 				<mat-form-field class = "example-full-width">
-						<input matInput [(ngModel)] = "Submit" placeholder = "Sex Acts">
+						<input matInput [(ngModel)] = "Submit" placeholder = "Sex Acts" name = "sexNonSafe">
 				</mat-form-field>
 
 				<br>
 				<mat-form-field class = "example-full-width">
-						<input matInput [(ngModel)] = "Submit" placeholder = "Clothing worn at the time">
+						<input matInput [(ngModel)] = "Submit" placeholder = "Clothing worn at the time" name = "clothesNonSafe">
 				</mat-form-field>
 
 				<br>
 				<mat-form-field class = "example-full-width">
-						<input matInput [(ngModel)] = "Submit" placeholder = "injuries">
+						<input matInput [(ngModel)] = "Submit" placeholder = "injuries" name = "subNonSafe">
 				</mat-form-field>
 
-				<!-- will also need an external link from this page-->
+				<!-- will also need an external link from this page
 				<br>
 				<mat-form-field class = "example-full-width">
 						<input matInput [(ngModel)] = "Submit" placeholder = "Additional Resources Link">
 				</mat-form-field>
+				IMPLEMENT LATER ON 
+				-->
 
 
 				<br> 
@@ -59,30 +60,72 @@
 				<mat-spinner [style.display] ="showSpinner ? 'block' : 'none'"></mat-spinner>
 			
 			</mat-card>
-		
-			<mat-card *ngIf = "answerDisplay">
-				<h1>{{ submitDisplay}}, you're damn right.</h1>
-			</mat-card>
 		</form>	
 		</div>>
 	</div>
 	
 	<div *ngIf="getStep()==4">
-		<div>
-			<ul>
-		  <li>Need to link to location options to run away</li>
-		  <li>For sense of safety tell them police are notified your location</li>
-			</ul>
-		</div>>
+			<app-header></app-header>
+			<div>
+					<form class = "example-form center">
+					  <mat-card>
+						  <mat-form-field class = "example-full-width">
+							  <input matInput [(ngModel)] = "Submit" placeholder = "Description of Suspect" name = "descSafe">
+						  </mat-form-field>
+			  
+						  <br>
+						  <mat-form-field class = "example-full-width">
+							  <input matInput [(ngModel)] = "Submit" placeholder = "Relation if Any" name = "relSafe">
+						  </mat-form-field>
+					  
+						  <br>
+						  <mat-form-field class = "example-full-width">
+								  <input matInput [(ngModel)] = "Submit" placeholder = "Time/Date" name = "timeSafe">
+								  <!-- Need to add an option if it less than 48 hours-->
+								  <!--If less than 48 hours output nearest hospital location-->
+						  </mat-form-field>
+		  
+						  <br>
+						  <mat-form-field class = "example-full-width">
+								  <input matInput [(ngModel)] = "Submit" placeholder = "Sex Acts" name = "sexSafe">
+						  </mat-form-field>
+		  
+						  <br>
+						  <mat-form-field class = "example-full-width">
+								  <input matInput [(ngModel)] = "Submit" placeholder = "Clothing worn at the time" name = "clothesSafe">
+						  </mat-form-field>
+		  
+						  <br>
+						  <mat-form-field class = "example-full-width">
+								  <input matInput [(ngModel)] = "Submit" placeholder = "injuries" name = "subSafe">
+						  </mat-form-field>
+		  
+						  <!-- will also need an external link from this page
+						  <br>
+						  <mat-form-field class = "example-full-width">
+								  <input matInput [(ngModel)] = "Submit" placeholder = "Additional Resources Link">
+						  </mat-form-field>
+						  IMPLEMENT LATER ON 
+						  -->
+		  
+		  
+						  <br> 
+						  <button mat-raised-button (click) = "showSubmit()">Submit</button>
+						  <mat-spinner [style.display] ="showSpinner ? 'block' : 'none'"></mat-spinner>
+					  
+					  </mat-card>
+				  </form>	
+				  </div>>
 	</div>
 	
 	<!-- will need to be based on time to know hours of buildings open-->
 	<div *ngIf="getStep()==5">
 		<app-geolocate></app-geolocate>
 		<div>
-			<ul>
-		  <li>Recommend safe place</li>
-		  <li>Output nearest blue box based on location</li>
-			</ul>
+			<!-- later on ADD ThiS 
+		  Recommend safe place
+		  Output nearest blue box based on location
+		  -->
+		  <app-bigbox title="Call 911 Immediately" color="red"></app-bigbox>
 		</div>>
 	</div>
