--- a/src/app/components/flood/flood.component.html
+++ b/src/app/components/flood/flood.component.html
@@ -2,21 +2,13 @@
 <div *ngIf="getStep()==1">
 	<app-bigbox title="Are you injured?" color="#7380C9"></app-bigbox>
 	<app-optionsbuttons title="Yes" (click)="gotoStep(2)"></app-optionsbuttons>
-	<app-optionsbuttons title="No" (click)="gotoStep(3)"></app-optionsbuttons>
+	<app-optionsbuttons title="No" (click)="zairasRedirect('https://fast.esns.life/report2.php?lat=36.823967599999996&long=-119.70204929999998&dist=25&typeID=1')"></app-optionsbuttons>
 </div>
 
 <div *ngIf="getStep()==2">
 	<app-bigbox title="Call 911 Immediately" color="red"></app-bigbox>
 </div>
 
-<div *ngIf="getStep()==3">
-	<app-bigbox title="Gather Information Before Calling 911" color="#7380C9"></app-bigbox>
-	<div>
-		<ul>
-			<li>location page redirect</li>
-		</ul>
-	</div>>
-</div>
 
 <!-- this will need an additional page for a form for emailing campus service-->
 <!-- will need yes/no for location-->
