--- a/src/app/components/shooting/shooting.component.html
+++ b/src/app/components/shooting/shooting.component.html
@@ -8,26 +8,11 @@
 <div *ngIf="getStep()==2">
 	<app-bigbox title="Are you safe?" color="red"></app-bigbox>
   <!-- will need an additional step figure out how-->
-  <app-optionsbuttons title = "Yes" (click)= "gotoStep(4)"></app-optionsbuttons>
-  <app-optionsbuttons title = "No" (click) = "zairasRedirect('https://fast.esns.life/report.php?lat=36.823967599999996&long=-119.70204929999998&dist=25')"></app-optionsbuttons>
+  <app-optionsbuttons title = "Yes" (click)= "zairasRedirect('https://fast.esns.life/report2.php?lat=36.823967599999996&long=-119.70204929999998&dist=25&typeID=0')"></app-optionsbuttons>
+  <app-optionsbuttons title = "No" (click) = "zairasRedirect('https://fast.esns.life/report2.php?lat=36.823967599999996&long=-119.70204929999998&dist=25&typeID=0')"></app-optionsbuttons>
 	<!-- need yes and no option, look at drive-->
 </div>
 
 <div *ngIf="getStep()==3">
-	<app-bigbox title="Gather Information Before Calling 911" color="#7380C9"></app-bigbox>
-	<div>
-		<ul>
-			<li>Need to link back to the repot page</li>
-		</ul>
-	</div>>
+	<app-bigbox title="You currently can't report this option" color="green"></app-bigbox>
 </div>
-
-<div *ngIf="getStep()==4">
-	<div>
-		<ul>
-      <li>Not sure but in these steps I think we need to link to old</li>
-		</ul>
-	</div>>
-</div>
-
-
