Skipping the geolocation

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -43,7 +43,7 @@
 
 
   <!-- always there report button -->
-  <a href="/report">
+  <a href="/reportType">
     <button mat-raised-button color="warn" class="reportBtn">Report</button>
   </a>
 </div>
